fix how it works layout on mobile

--- a/src/assets/style/grid.scss
+++ b/src/assets/style/grid.scss
@@ -1,6 +1,7 @@
 .flex {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   
   > *:last-child {
     margin-left: 0;
