--- a/src/assets/style/layouts.scss
+++ b/src/assets/style/layouts.scss
@@ -37,6 +37,7 @@
 
 .container-main {
   flex-direction: column;
+  flex-wrap: nowrap;
 
   @media screen and (min-width: 750px) {
     flex-direction: row;
