--- a/src/assets/style/plugins.scss
+++ b/src/assets/style/plugins.scss
@@ -3,6 +3,7 @@
     padding: 0 10px 0 0;
 
     @media screen and (min-width: 750px) {
+      min-width: 225px;
       width: 375px;
     }
   }
